@@ -1,3 +1,4 @@
+Changed the angle and position of the camera in the Crust tab when handling zoom
 # 0.00.12 (60562) Jan 24, 2012
 Density fixes for above-ground levels (water / air) for Crust tab
 More consistent title fonts
